# claude-browser-use

./: .gitignore  README.md  homework.md
chrome_extension/: background.js  manifest.json
python_client/: .gitignore  main.py  main_claude_computer_use.py  pyproject.toml
